Make cards in footer invisible, fixes #64

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -36,3 +36,19 @@ Video Handler (To be used)
 .colour-custom {
   background-color: #3a99e8 !important;
 }
+
+footer .card {
+  background: rgba(0,0,0,0);
+  border: none;
+  color: white;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: white;
+  text-decoration: none;
+}
